--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -42,7 +42,7 @@
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="220" />
+            <ColumnDefinition Width="241" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
@@ -374,27 +374,35 @@
                                                 <RowDefinition />
                                             </Grid.RowDefinitions>
                                             <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="7*" />
+                                                <ColumnDefinition Width="6*" />
+                                                <ColumnDefinition Width="5*" />
                                                 <ColumnDefinition Width="5*" />
                                                 <ColumnDefinition Width="4*" />
-                                                <ColumnDefinition Width="6*" />
+                                                <ColumnDefinition Width="5*" />
                                             </Grid.ColumnDefinitions>
                                             <TextBlock Grid.Column="0" Text="{x:Bind Mode=OneWay, Path=TrackFilePosition}" />
                                             <TextBlock
                                                 Grid.Column="1"
                                                 HorizontalTextAlignment="Right"
-                                                Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Distance(Distance)}" />
+                                                Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Distance(Distance)}"
+                                                ToolTipService.ToolTip="Distance [km]" />
                                             <TextBlock
                                                 Grid.Column="2"
                                                 HorizontalTextAlignment="Right"
-                                                Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Speed(Speed)}" />
+                                                Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Altitude(Ascent)}"
+                                                ToolTipService.ToolTip="Ascent [m]" />
                                             <TextBlock
                                                 Grid.Column="3"
+                                                HorizontalTextAlignment="Right"
+                                                Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Speed(Speed)}"
+                                                ToolTipService.ToolTip="Speed [km/h]" />
+                                            <TextBlock
+                                                Grid.Column="4"
                                                 HorizontalTextAlignment="Right"
                                                 Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Duration(Time)}" />
                                             <TextBox
                                                 Grid.Row="1"
-                                                Grid.ColumnSpan="4"
+                                                Grid.ColumnSpan="5"
                                                 CharacterReceived="TextBox_CharacterReceived"
                                                 IsSpellCheckEnabled="False"
                                                 Text="{x:Bind Mode=TwoWay, Path=Name}" />
@@ -441,16 +449,20 @@
                                                 <RowDefinition />
                                             </Grid.RowDefinitions>
                                             <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="24" />
                                                 <ColumnDefinition Width="*" />
                                                 <ColumnDefinition Width="*" />
                                             </Grid.ColumnDefinitions>
-                                            <TextBlock Grid.Column="0" Text="{x:Bind Mode=OneWay, Path=TrackFilePosition}" />
-                                            <TextBlock
-                                                Grid.Column="1"
-                                                HorizontalTextAlignment="Right"
-                                                Text="{x:Bind Mode=OneWay, Path=PointOfInterest.Type}" />
+                                            <Image
+                                                Grid.RowSpan="2"
+                                                Width="22"
+                                                Height="22"
+                                                VerticalAlignment="Center"
+                                                Source="{x:Bind Mode=OneWay, Path=cycloid:Convert.InfoTypeIcon(PointOfInterest.Type)}" />
+                                            <TextBlock Grid.Column="1" Text="{x:Bind Mode=OneWay, Path=TrackFilePosition}" />
                                             <TextBox
                                                 Grid.Row="1"
+                                                Grid.Column="1"
                                                 Grid.ColumnSpan="2"
                                                 CharacterReceived="TextBox_CharacterReceived"
                                                 IsSpellCheckEnabled="False"
